exports[`no-unused-expressions > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 12
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 3
        },
        "end": {
          "line": 6,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 3
        },
        "end": {
          "line": 5,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 26
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 13
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 20`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 5
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 21`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 12
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 22`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 23`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 1
        },
        "end": {
          "line": 3,
          "column": 6
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 8
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 5,
          "column": 5
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 6
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-unused-expressions > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-unused-expressions",
      "messageId": "unusedExpression",
      "message": "Expected an assignment or function call and instead saw an expression.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 1,
          "column": 11
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;
